Added a Unit test target, and unit tests for FCLBusinessFilesParser.

--- a/facilescan.xcodeproj/xcshareddata/xcschemes/facile.xcscheme
+++ b/facilescan.xcodeproj/xcshareddata/xcschemes/facile.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DF9980EF22C0D32000D4E996"
+               BuildableName = "facilescanTests.xctest"
+               BlueprintName = "facilescanTests"
+               ReferencedContainer = "container:facilescan.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
